--- a/PhoneBook_24/Views/Contacts/Index.cshtml
+++ b/PhoneBook_24/Views/Contacts/Index.cshtml
@@ -24,12 +24,14 @@
         @foreach (var contact in Model)
         {
             <tr>
-                <td>@Html.ActionLink("Update", "Update", "Contacts", new { id = contact.Id })</td>
+                <td>@Html.ActionLink("Update", "Update", "Contacts", new { id = contact.Id },null)</td>
                 <td>@contact.Id</td>
                 <td>@contact.Name</td>
                 <td>@contact.Email</td>
-                <td>@Html.ActionLink("Phone", "PhoneNumber", "Contacts",new { id = contact.Id})</td>
-                @contact.Phones.
+             
+
+                <td>@Html.ActionLink("Phones", "ContactPhones", "Contacts",new { id = contact.Id},null)</td>
+               
             </tr>
         }
 
