Add REST API Stage2

--- a/PhoneBook_24/Views/Contacts/Update.cshtml
+++ b/PhoneBook_24/Views/Contacts/Update.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PhoneBook_24.BusinessLogic.Models.Contact
 
 @{
-    ViewBag.Title = "Update1";
+    ViewBag.Title = "Update";
 }
 
 <h2>Updata</h2>
