--- a/PhoneBook_24/Views/Contacts/Index.cshtml
+++ b/PhoneBook_24/Views/Contacts/Index.cshtml
@@ -32,7 +32,7 @@
         @foreach (var contact in Model)
         {
             <tr>
-                <td>@Html.ActionLink("Update", "Update", "Contacts", new { id = contact.Id },null)</td>
+                <td>@Html.ActionLink("Update", "Update", "Contacts", new { id = contact.Id, email = contact.Email },null)</td>
                 <td>@contact.Id</td>
                 <td>@contact.Name</td>
                 <td>@contact.Email</td>
