--- a/PhoneBook_24/Views/Contacts/Partials/Phones.cshtml
+++ b/PhoneBook_24/Views/Contacts/Partials/Phones.cshtml
@@ -13,7 +13,7 @@
         @foreach (var phone in Model)
         {
             <tr>
-                <td>@Html.ActionLink("UpdatePhone", "Update", "Phones");</td>
+                <td>@Html.ActionLink("Update", "UpdatePhones", "Phones")</td>
                 <td>@phone.Number</td>
                 <td>@phone.Type</td>
             </tr>
